Refactor configuration loading in smartdiaodu.py and web files for improved database integration
- Updated .env.example to clarify environment variable usage and added instructions for configuration.
- Enhanced smartdiaodu.py to load application configuration from the database, allowing dynamic updates of key settings.
- Modified web/index.html and web/map.html to retrieve configuration values from the database, improving flexibility and reducing hardcoded values.
- Improved error handling and user feedback during configuration loading processes.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# 复制为 .env 并填入真实值，勿提交 .env
-SUPABASE_URL=https://你的项目.supabase.co
-SUPABASE_SERVICE_ROLE_KEY=sb_secret_你的Secret密钥
+# 复制为 .env 并填入真实值，勿提交 .env（.env 已在 .gitignore）
+# 后端用此连接 Supabase 并读取 app_config，除这两项外其余配置从数据库读
+SUPABASE_URL=https://zqcctbcwibnqmumtqweu.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=在这里粘贴_Dashboard_Settings_API_里的_service_role_密钥
 # 可选：JWT 登录签发密钥
 # JWT_SECRET=随机字符串
